# django-generic-filters

./: .gitignore  .travis.yml  AUTHORS  CHANGELOG  INSTALL  LICENSE  MANIFEST.in  Makefile  README.rst  VERSION  docker-compose.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  publish.yml
demo/: README  requirements.pip  setup.py
demo/demoproject/: compat.py  manage.py  settings.py  tests.py  urls.py
demo/demoproject/filter/: forms.py  tests.py  urls.py  views.py
demo/demoproject/filter/fixtures/: data.json  initial_data.json  test_data.json
demo/demoproject/filter/templates/user/: user_list.html
demo/demoproject/templates/: home.html
demoproject/: manage.py  settings.py  tests.py  urls.py
demoproject/filter/: forms.py  tests.py  urls.py  views.py
demoproject/filter/templates/user/: user_list.html
demoproject/templates/: home.html
django_genericfilters/: fields.py  forms.py  models.py  views.py
django_genericfilters/static/css/: filters_list.css  genericfilters.css
django_genericfilters/static/js/: genericfilters.js
django_genericfilters/templates/genericfilters/: filter_list.html  order_by_list.html  query_filter.html
django_genericfilters/templates/snippets/: pagination.html
django_genericfilters/templatetags/: paginator.py  updateurl.py  utils.py
django_genericfilters/tests/: fields.py  forms.py  test_fields.py  test_forms.py  test_templatetags.py  test_views.py  views.py
docs/: Makefile  conf.py  dev.txt  index.txt
docs/about/: index.txt
docs/api/: filtered_form.txt  filtered_list_view.txt  index.txt
