[metadata]
name = django-generic-filters
description =
    Easy filters for your Generic ListView with Django.
author = PeopleDoc
author_email = peopleask@novapost.fr
url = https://github.com/peopledoc/django-generic-filters
project_urls =
    GitHub = https://github.com/peopledoc/django-generic-filters
    Changelog = https://github.com/peopledoc/django-generic-filters/releases
    Issue tracker = https://github.com/peopledoc/django-generic-filters/issues
    Documentation = https://django-generic-filters.readthedocs.io
long_description = file: README.rst
keywords = class-based view, generic view, filters
license = BSD
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0

[options]
zip_safe = True
include_package_data = True
packages = find:
install_requires =
    Django
    munch

[options.packages.find]
include =
    django_genericfilters
    django_genericfilters.*

[isort]
profile = black
known_first_party = demo,django_genericfilters
skip = .venv,.tox

[flake8]
# This section ensures black and flake8 play nice together
max-line-length = 88
# E203: whitespace before colon on list slice: mylist[1 : 2]
# E501: line too long (black knows better)
extend-ignore = E203,E501
extend-exclude = .venv
